      rather than looking it up again, making it faster.
      (Ian Clatworthy)

    * New option ``-c``/``--change`` for ``diff`` and ``status`` to show
      changes in one revision.  (Lukáš Lalinský)

  API BREAKS:

   * ``Branch.append_revision`` is removed altogether; please use 
     ``Branch.set_last_revision_info`` instead.  (Martin Pool)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

  TESTING:

   * Tests may now raise TestNotApplicable to indicate they shouldn't be 
     run in a particular scenario.  (Martin Pool)

   * New function multiply_tests_from_modules to give a simpler interface
     to test parameterization.  (Martin Pool, Robert Collins)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

   * NULL_REVISION is returned to indicate the null revision, not None.
     (Aaron Bentley)

  INTERNALS:

   * ``bzrlib.plugin.all_plugins`` has been deprecated in favour of
     ``bzrlib.plugin.plugins()`` which returns PlugIn objects that provide
     useful functionality for determining the path of a plugin, its tests, and
     its version information. (Robert Collins)

   * Add the option user_encoding to the function 'show_diff_trees()'
     in order to move the user encoding at the UI level. (Goffredo Baroncelli)

   * Add the function make_commit_message_template_encoded() and the function
     edit_commit_message_encoded() which handle encoded strings.
     This is done in order to mix the commit messages (which is a unicode
     string), and the diff which is a raw string. (Goffredo Baroncelli)

   * New trace function ``mutter_callsite`` will print out a subset of the
     stack to the log, which can be useful for gathering debug details.
     (Robert Collins)

    * ``bzrlib.pack.ContainerWriter`` now tracks how many records have been
      added via a public attribute records_written. (Robert Collins)
